--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -1,6 +1,6 @@
 html, body {
 	width: 100%;
-	max-height: 100%;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 }
@@ -11,6 +11,10 @@ body {
 	padding: 0;
 	box-sizing: border-box;
 	font-family: "Roboto", "Helvetica Neue", Arial, sans-serif;
+}
+
+#app {
+	height: 100%;
 }
 
 a {
