Add play button for normal pipelines

--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -2,6 +2,10 @@
 	--outer-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
 	--outer-shadow-sm: 0 .125rem .25rem rgba(0,0,0,.075);
 	--outer-shadow-lg: 0 1rem 3rem rgba(0,0,0,.175);
+	--g-red: rgb(255, 59, 48);
+	--g-blue: rgb(0, 122, 255);
+	--g-green: rgb(52, 199, 89);
+	--g-teal: rgb(90, 200, 250);
 }
 
 html, body {
