--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -6,6 +6,7 @@
 	--g-blue: rgb(0, 122, 255);
 	--g-green: rgb(52, 199, 89);
 	--g-teal: rgb(90, 200, 250);
+	--border: 1px solid rgba(0,0,0,.125);
 }
 
 html, body {
