--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -6,6 +6,8 @@
 	--g-blue: rgb(0, 122, 255);
 	--g-green: rgb(52, 199, 89);
 	--g-teal: rgb(90, 200, 250);
+	--g-light-gray: rgb(250, 250, 250);
+	--g-dark-gray: rgb(155, 155, 155);
 	--border: 1px solid rgba(0,0,0,.125);
 }
 
