--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -9,6 +9,8 @@
 	--g-light-gray: rgb(250, 250, 250);
 	--g-dark-gray: rgb(155, 155, 155);
 	--border: 1px solid rgba(0,0,0,.125);
+	--font-weight-hover: 700;
+	--font-weight-focus: 1000;
 }
 
 html, body {
