--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -20,3 +20,8 @@ html, body {
 	padding: 0;
 	font-size: 12px;
 }
+
+/* The container of bootsrap popover is main, so define the style here */
+.popover {
+	max-width: 400px;
+}
