Fix new pipeline fade edge position, add auto scroll

--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -25,4 +25,5 @@ html, body {
 /* The container of bootsrap popover is main, so define the style here */
 .popover {
 	max-width: 400px;
+	pointer-events: none;
 }
