New display style

--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -25,5 +25,8 @@ html, body {
 /* The container of bootsrap popover is main, so define the style here */
 .popover {
 	max-width: 400px;
-	pointer-events: none;
+}
+
+.card {
+	border: 0;
 }
