--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -20,6 +20,7 @@ html, body {
 	margin: 0;
 	padding: 0;
 	font-size: 12px;
+	background-color: var(--g-light-gray);
 }
 
 #image-vis-popover-container .popover {
